--- a/FINAL/css/style.css
+++ b/FINAL/css/style.css
@@ -77,3 +77,9 @@ main {
     width: 100%;
     padding-top: 0 !important;
 }
+
+.add{
+    float: right;
+    margin-top: 3.8%;
+    margin-right: 6%;
+}
